--- a/SparkEngine/SparkEngine.csproj
+++ b/SparkEngine/SparkEngine.csproj
@@ -35,7 +35,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
@@ -47,37 +48,19 @@
     <Compile Include="Debug\DebugMessage.cs" />
     <Compile Include="Debug\DebugTile.cs" />
     <Compile Include="Debug\DebugTiler.cs" />
-    <Compile Include="Dictionaries\EffectDictionary.cs" />
-    <Compile Include="Dictionaries\EntityDictionary.cs" />
-    <Compile Include="Dictionaries\FontDictionary.cs" />
-    <Compile Include="Dictionaries\StructureDictionary.cs" />
-    <Compile Include="Dictionaries\TextureDictionary.cs" />
-    <Compile Include="Dictionaries\TileDictionary.cs" />
-    <Compile Include="Game1.cs" />
-    <Compile Include="IDs\EffectIDs.cs" />
-    <Compile Include="IDs\EntityIDs.cs" />
-    <Compile Include="IDs\FontIDs.cs" />
-    <Compile Include="IDs\StateIDs.cs" />
-    <Compile Include="IDs\StructureIDs.cs" />
-    <Compile Include="IDs\TileIDs.cs" />
-    <Compile Include="IDs\UserInterfaceIDs.cs" />
+    <Compile Include="Assets\AssetDictionary.cs" />
+    <Compile Include="Assets\AssetDictionaryInt.cs" />
+    <Compile Include="Assets\AssetDictionaryString.cs" />
     <Compile Include="Input\IClickable.cs" />
     <Compile Include="Input\IHoverable.cs" />
     <Compile Include="Input\InputHandler.cs" />
     <Compile Include="Input\MouseButtons.cs" />
     <Compile Include="Level\Map.cs" />
     <Compile Include="Level\ObjectManager.cs" />
-    <Compile Include="ObeliskGame.cs" />
-    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\x86\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
-    <Compile Include="obj\x86\Release\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\x86\Release\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\x86\Release\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
+    <Compile Include="SparkGame.cs" />
     <Compile Include="Pathfinding\PathFinder.cs" />
     <Compile Include="Pathfinding\PathFinderTest.cs" />
     <Compile Include="Pathfinding\PathNode.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rendering\Camera.cs" />
     <Compile Include="Rendering\RenderHelper.cs" />
@@ -91,7 +74,6 @@
     <Compile Include="UI\Buttons\Button.cs" />
     <Compile Include="UI\Pivot.cs" />
     <Compile Include="UI\ProgressBar.cs" />
-    <Compile Include="UI\ResourceWindow.cs" />
     <Compile Include="UI\StateUI.cs" />
     <Compile Include="UI\Tooltip.cs" />
     <Compile Include="UI\UIElement.cs" />
@@ -110,30 +92,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Icon.ico" />
-    <Content Include="obj\x86\Debug\Obelisk.csproj.FileListAbsolute.txt" />
-    <Content Include="obj\x86\Debug\Obelisk.exe" />
-    <Content Include="obj\x86\Debug\Obelisk.pdb" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="app.manifest" />
-    <None Include="obj\x86\Debug\CoreCompileInputs.cache" />
-    <None Include="obj\x86\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
-    <None Include="obj\x86\Debug\Obelisk.csproj.CopyComplete" />
-    <None Include="obj\x86\Debug\Obelisk.csproj.CoreCompileInputs.cache" />
-    <None Include="obj\x86\Debug\Obelisk.csprojAssemblyReference.cache" />
-    <None Include="obj\x86\Debug\Obelisk.csprojResolveAssemblyReference.cache" />
-    <None Include="obj\x86\Debug\SparkEngine.csproj.CoreCompileInputs.cache" />
-    <None Include="obj\x86\Debug\SparkEngine.csprojAssemblyReference.cache" />
-    <None Include="obj\x86\Release\DesignTimeResolveAssemblyReferencesInput.cache" />
-    <None Include="obj\x86\Release\Obelisk.csproj.CoreCompileInputs.cache" />
-    <None Include="obj\x86\Release\Obelisk.csprojResolveAssemblyReference.cache" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Localisation\" />
-    <Folder Include="obj\Windows\Content\" />
-    <Folder Include="obj\x86\Debug\TempPE\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
