--- a/SparkEngine/SparkEngine.csproj
+++ b/SparkEngine/SparkEngine.csproj
@@ -58,6 +58,9 @@
     <Compile Include="Input\MouseButtons.cs" />
     <Compile Include="Level\Map.cs" />
     <Compile Include="Level\ObjectManager.cs" />
+    <Compile Include="Rendering\DrawLayer.cs" />
+    <Compile Include="Rendering\IsometricCamera.cs" />
+    <Compile Include="Rendering\SpriteSortMethod.cs" />
     <Compile Include="SparkGame.cs" />
     <Compile Include="Pathfinding\PathFinder.cs" />
     <Compile Include="Pathfinding\PathFinderTest.cs" />
@@ -65,6 +68,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rendering\Camera.cs" />
     <Compile Include="Rendering\RenderHelper.cs" />
+    <Compile Include="States\ComponentManager.cs" />
     <Compile Include="States\GameState.cs" />
     <Compile Include="States\StateActivityLevel.cs" />
     <Compile Include="States\StateManager.cs" />
@@ -74,16 +78,13 @@
     <Compile Include="Time\TimeManager.cs" />
     <Compile Include="UI\Buttons\Button.cs" />
     <Compile Include="UI\Pivot.cs" />
-    <Compile Include="UI\ProgressBar.cs" />
     <Compile Include="UI\StateUI.cs" />
     <Compile Include="UI\Tooltip.cs" />
     <Compile Include="UI\UIElement.cs" />
     <Compile Include="UI\UIManager.cs" />
     <Compile Include="UI\UIPanel.cs" />
-    <Compile Include="World\MapTileMode.cs" />
-    <Compile Include="World\Terrain.cs" />
-    <Compile Include="World\TerrainCell.cs" />
-    <Compile Include="World\WorldObject.cs" />
+    <Compile Include="Components\Terrain.cs" />
+    <Compile Include="Components\WorldObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
