--- a/SparkTest/SparkTest.csproj
+++ b/SparkTest/SparkTest.csproj
@@ -44,6 +44,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Components\CameraController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SparkGame.cs" />
