--- a/SparkEngine/SparkEngine.csproj
+++ b/SparkEngine/SparkEngine.csproj
@@ -42,13 +42,32 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;WINDOWS</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE;WINDOWS</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Components\Component.cs" />
     <Compile Include="Components\IDrawableComponent.cs" />
     <Compile Include="Components\TerrainTile.cs" />
     <Compile Include="Debug\CellPositionInfo.cs" />
-    <Compile Include="Debug\DebugLog.cs" />
-    <Compile Include="Debug\DebugMessage.cs" />
+    <Compile Include="Debug\Log.cs" />
+    <Compile Include="Debug\LogManager.cs" />
+    <Compile Include="Debug\LogMessage.cs" />
     <Compile Include="Debug\DebugTile.cs" />
     <Compile Include="Debug\DebugTiler.cs" />
     <Compile Include="Assets\AssetDictionary.cs" />
