--- a/SparkTest/SparkTest.csproj
+++ b/SparkTest/SparkTest.csproj
@@ -45,6 +45,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Components\CameraController.cs" />
+    <Compile Include="Components\MinefieldTile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SparkGame.cs" />
