--- a/SparkEngine/SparkEngine.csproj
+++ b/SparkEngine/SparkEngine.csproj
@@ -61,13 +61,17 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Components\ArrayGrid.cs" />
     <Compile Include="Components\CellBatch.cs" />
     <Compile Include="Components\CellData.cs" />
     <Compile Include="Components\Component.cs" />
     <Compile Include="Components\ComponentBatch.cs" />
     <Compile Include="Components\Drawable.cs" />
-    <Compile Include="Components\GridCell.cs" />
+    <Compile Include="Components\Grid.cs" />
+    <Compile Include="Components\Perspective.cs" />
+    <Compile Include="Components\ProtoEntity.cs" />
     <Compile Include="Components\ScreenPosition.cs" />
+    <Compile Include="Components\Unit.cs" />
     <Compile Include="Components\WorldCoordinate.cs" />
     <Compile Include="Debug\CellPositionInfo.cs" />
     <Compile Include="Debug\Log.cs" />
@@ -89,7 +93,8 @@
     <Compile Include="Pathfinding\PathNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Components\Camera.cs" />
-    <Compile Include="Rendering\Projector.cs" />
+    <Compile Include="Systems\GridBatcher.cs" />
+    <Compile Include="Utilities\Projector.cs" />
     <Compile Include="Components\Sprite.cs" />
     <Compile Include="Rendering\TileMode.cs" />
     <Compile Include="Systems\CameraSystem.cs" />
@@ -99,12 +104,13 @@
     <Compile Include="States\StateActivityLevel.cs" />
     <Compile Include="States\StateManager.cs" />
     <Compile Include="Systems\DrawSystem.cs" />
+    <Compile Include="Systems\GridSystem.cs" />
     <Compile Include="Systems\SpriteDrawSystem.cs" />
     <Compile Include="Time\OnTickEventArgs.cs" />
     <Compile Include="Time\TemporaryTicker.cs" />
     <Compile Include="Time\Ticker.cs" />
     <Compile Include="Time\TimeManager.cs" />
-    <Compile Include="Components\Grid.cs" />
+    <Compile Include="Components\BatchedGrid.cs" />
     <Compile Include="Components\GridObject.cs" />
     <Compile Include="Components\Clickable.cs" />
   </ItemGroup>
