--- a/SparkEngine/SparkEngine.csproj
+++ b/SparkEngine/SparkEngine.csproj
@@ -62,14 +62,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Components\ArrayGrid.cs" />
-    <Compile Include="Components\CellBatch.cs" />
-    <Compile Include="Components\CellData.cs" />
+    <Compile Include="Systems\Batching\CellBatch.cs" />
+    <Compile Include="Systems\Batching\CellData.cs" />
     <Compile Include="Components\Component.cs" />
     <Compile Include="Components\ComponentBatch.cs" />
     <Compile Include="Components\Drawable.cs" />
     <Compile Include="Components\Grid.cs" />
     <Compile Include="Components\Perspective.cs" />
-    <Compile Include="Components\ProtoEntity.cs" />
+    <Compile Include="Systems\Batching\ProtoEntity.cs" />
     <Compile Include="Components\ScreenPosition.cs" />
     <Compile Include="Components\Unit.cs" />
     <Compile Include="Components\WorldCoordinate.cs" />
@@ -93,7 +93,9 @@
     <Compile Include="Pathfinding\PathNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Components\Camera.cs" />
-    <Compile Include="Systems\GridBatcher.cs" />
+    <Compile Include="Systems\Batching\GridBatcher.cs" />
+    <Compile Include="Systems\ComponentUpdateMethod.cs" />
+    <Compile Include="Systems\ComponentDrawMethod.cs" />
     <Compile Include="Utilities\Projector.cs" />
     <Compile Include="Components\Sprite.cs" />
     <Compile Include="Rendering\TileMode.cs" />
