--- a/SparkEngine/SparkEngine.csproj
+++ b/SparkEngine/SparkEngine.csproj
@@ -62,15 +62,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Components\ArrayGrid.cs" />
+    <Compile Include="States\ComponentPool.cs" />
     <Compile Include="Systems\Batching\CellBatch.cs" />
     <Compile Include="Systems\Batching\CellData.cs" />
-    <Compile Include="Components\Component.cs" />
+    <Compile Include="Components\IComponent.cs" />
     <Compile Include="Components\ComponentBatch.cs" />
     <Compile Include="Components\Drawable.cs" />
     <Compile Include="Components\Grid.cs" />
     <Compile Include="Components\Perspective.cs" />
-    <Compile Include="Systems\Batching\ProtoEntity.cs" />
-    <Compile Include="Components\ScreenPosition.cs" />
+    <Compile Include="Entities\ProtoEntity.cs" />
+    <Compile Include="Components\WorldPosition.cs" />
     <Compile Include="Components\Unit.cs" />
     <Compile Include="Components\WorldCoordinate.cs" />
     <Compile Include="Debug\CellPositionInfo.cs" />
@@ -94,19 +95,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Components\Camera.cs" />
     <Compile Include="Systems\Batching\GridBatcher.cs" />
-    <Compile Include="Systems\ComponentUpdateMethod.cs" />
-    <Compile Include="Systems\ComponentDrawMethod.cs" />
     <Compile Include="Utilities\Projector.cs" />
     <Compile Include="Components\Sprite.cs" />
     <Compile Include="Rendering\TileMode.cs" />
     <Compile Include="Systems\CameraSystem.cs" />
-    <Compile Include="Systems\ClickableSystem.cs" />
     <Compile Include="Systems\ComponentSystem.cs" />
     <Compile Include="States\GameState.cs" />
     <Compile Include="States\StateActivityLevel.cs" />
     <Compile Include="States\StateManager.cs" />
-    <Compile Include="Systems\DrawSystem.cs" />
-    <Compile Include="Systems\GridSystem.cs" />
+    <Compile Include="Systems\IDrawSystem.cs" />
+    <Compile Include="Systems\ArrayGridSystem.cs" />
     <Compile Include="Systems\SpriteDrawSystem.cs" />
     <Compile Include="Time\OnTickEventArgs.cs" />
     <Compile Include="Time\TemporaryTicker.cs" />
@@ -114,7 +112,6 @@
     <Compile Include="Time\TimeManager.cs" />
     <Compile Include="Components\BatchedGrid.cs" />
     <Compile Include="Components\GridObject.cs" />
-    <Compile Include="Components\Clickable.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
